# wedne

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README-EN.md  README.md  docker-compose.yml  pyproject.toml
wed/: utils.py
wed/client/: __main__.py  executor.py  shared_commands.py  telegram.py  telegram_creds.py  watcher.py
wed/server/: __main__.py  api.py  commands.py  db.py  settings.py  tasks.py
wed/server/api/: __init__.py  stats.py  visits.py
wedne/: __main__.py  commands.py  commands_test.py  utils.py  utils_test.py
wedne/client/: __main__.py  consts.py  shared_commands.py  telegram.py  watcher.py
wedne/server/: __main__.py  db.py  gunicorn.py  settings.py  tasks.py
wedne/server/api/: __init__.py  stats.py  visits.py
