[tool.poetry]
name = "wed"
version = "0.1.0"
description = ""
authors = ["Oskar Sharipov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}


[tool.poetry.group.server.dependencies]
fastapi = "^0.98.0"
peewee = "^3.16.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
huey = "^2.4.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pyright = "^1.1.316"
pre-commit = "^3.3.3"
autoflake = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
