[tool.poetry]
name = "wedne"
version = "1.1.2"
description = "Координируем строительство башни"
authors = ["Oskar Sharipov"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/igoose1/wedne"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^2.1.0"}
fire = "^0.5.0"
httpx = "^0.24.1"
telethon = "^1.28.5"
aiorun = "^2023.7.2"
pytz = "^2023.3"
pydantic-settings = "^2.0.2"


[tool.poetry.group.server.dependencies]
fastapi = "^0.101.0"
peewee = "^3.16.2"
uvicorn = "^0.22.0"
huey = "^2.4.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pyright = "^1.1.316"
pre-commit = "^3.3.3"
autoflake = "^2.2.0"
ruff = "^0.0.280"
ptpython = "^3.0.23"
pytest = "^7.4.0"

[tool.ruff]
select = [
	"E",
	"F",
	"C90",
	"I",
	"N",
	"YTT",
	"ASYNC",
	"S",
	"COM",
	"CPY",
	"C4",
	"EM",
	"ISC",
	"ICN",
	"G",
	"INP",
	"PIE",
	"RET",
	"SIM",
	"TID",
	"PTH",
	"TD",
	"PL",
	"RUF",
	"UP",
	"DTZ",
]
ignore = [
	"TD003",
]
[tool.ruff.per-file-ignores]
"*_test.py" = ["S101", "PLR2004"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
